test/functional/directory/gds/ts/gdssetup/lib/valid/max_no_of_dsa.cleanup
# 
# @OSF_COPYRIGHT@
# COPYRIGHT NOTICE
# Copyright (c) 1990, 1991, 1992, 1993, 1994, 1996 Open Software Foundation, Inc.
# ALL RIGHTS RESERVED (DCE).  See the file named COPYRIGHT.DCE for 
# the full copyright text.
#
# 
# HISTORY
# $Log: max_no_of_dsa.cleanup,v $
# Revision 1.1.4.2  1996/03/11  01:35:45  marty
# 	Update copyright years
# 	[1996/03/10  19:38:15  marty]
#
# Revision 1.1.4.1  1995/12/11  16:49:15  root
# 	Submit
# 	[1995/12/11  16:36:31  root]
# 
# Revision 1.1.2.1  1994/08/19  13:55:13  marrek
# 	Improve testcode coverage OT11586.
# 	[1994/08/19  11:43:37  marrek]
# 
# 	Improvement in test code coverage (ot11586).
# 	[1994/08/10  13:10:28  marrek]
# 
# $EndLog$
#
# $RCSfile: max_no_of_dsa.cleanup,v $ $Revision: 1.1.4.2 $ $Date: 1996/03/11 01:35:45 $
#

gdscp -c "x500obj bind -dirid 3 -cache; \
	  x500svc modify -preferadmfunctions TRUE -duacache TRUE -duafirst TRUE -usedsa FALSE -cacheclass RESIDENT -dontusecopy FALSE; \
	  x500obj delete /C=de/O=dbp/OU=dap11/CN=dsa/CN=dsa-m1; \
	  x500obj delete /C=de/O=dbp/OU=dap11/CN=dsa/CN=dsa-m2; \
	  x500obj delete /C=de/O=dbp/OU=dap11/CN=dsa/CN=dsa-m3; \
	  x500obj delete /C=de/O=dbp/OU=dap11/CN=dsa/CN=dsa-m4; \
	  x500obj delete /C=de/O=dbp/OU=dap11/CN=dsa/CN=dsa-m5; \
	  x500obj delete /C=de/O=dbp/OU=dap11/CN=dsa/CN=dsa-m6; \
	  x500obj delete /C=de/O=dbp/OU=dap11/CN=dsa/CN=dsa-m7; \
	  x500obj delete /C=de/O=dbp/OU=dap11/CN=dsa/CN=dsa-m8; \
	  x500obj delete /C=de/O=dbp/OU=dap11/CN=dsa/CN=dsa-m9; \
	  x500obj delete /C=de/O=dbp/OU=dap11/CN=dsa/CN=dsa-m11"

gdssysadm -fd -p
gdssysadm -fc -m2 -d3 -p
gdssysadm -fA -p
