test/functional/directory/gds/ts/gdssetup/lib/invalid/sv_domnodef5.cleanup
# 
# @OSF_COPYRIGHT@
# COPYRIGHT NOTICE
# Copyright (c) 1990, 1991, 1992, 1993, 1994, 1996 Open Software Foundation, Inc.
# ALL RIGHTS RESERVED (DCE).  See the file named COPYRIGHT.DCE for 
# the full copyright text.
#
# HISTORY
# $Log: sv_domnodef5.cleanup,v $
# Revision 1.1.4.2  1996/03/11  01:35:07  marty
# 	Update copyright years
# 	[1996/03/10  19:37:25  marty]
#
# Revision 1.1.4.1  1995/12/11  15:29:43  root
# 	Submit
# 	[1995/12/11  14:37:43  root]
# 
# Revision 1.1.2.2  1994/08/19  13:54:33  marrek
# 	Improve testcode coverage OT11586.
# 	[1994/08/19  11:45:08  marrek]
# 
# Revision 1.1.2.1  1994/07/15  13:29:58  marrek
# 	More gdssetup testcases.
# 	[1994/07/15  08:51:19  marrek]
# 
# $EndLog$
#
# $RCSfile: sv_domnodef5.cleanup,v $ $Revision: 1.1.4.2 $ $Date: 1996/03/11 01:35:07 $
#

gdscp -c "x500obj bind -dirid 3 -dsa /C=de/O=dbp/OU=dap11/CN=dsa/CN=dsa-m1; \
	  x500svc modify -preferadmfunctions TRUE -dontusecopy FALSE -localscope TRUE; \
	  x500obj delete /C=de/O=dbp/OU=dap11/CN=dsa/CN=dsa-m3"

gdssysadm -fd -p
gdssysadm -fc -m2 -d3 -p
gdssysadm -fA -p
